# Mochi.PhysX

./: .gitignore  .gitmodules  InfectedPhysX.Generator.sln  InfectedPhysX.sln  Mochi.PhysX.sln  README.md  THIRD-PARTY-NOTICES.md  build.cmd
.github/workflows/: Mochi.PhysX.yml  get-physx-revision.py
InfectedPhysX/: Globals.cs  InfectedPhysX.csproj
InfectedPhysX.Generator/: InfectedPhysX.Generator.csproj  Program.cs
InfectedPhysX.Generator/#Transformations/: PhysXEnumTransformation.cs  PhysXMacrosToConstantsTransformation.cs  PhysXNamespaceFixupTransformation.cs  PhysXRemovePaddingFieldsTransformation.cs  PhysxFlagsEnumTransformation.cs  RemoveBadPhysXDeclarationsTransformation.cs  __StripPrivateAndProtectedMembersTransformation.cs
InfectedPhysX.Generator/Properties/: launchSettings.json
InfectedPhysX.Sample/: BasicAllocator.cs  ErrorCallback.cs  InfectedPhysX.Sample.csproj  LoggingAllocator.cs  Program.cs  TextWriterEx.cs
InfectedPhysX.Sample/Properties/: launchSettings.json
InfectedPhysX/#Generated/: ArticulationV.cs  CUctx_st.cs  CUgraphicsResource_st.cs  ContactBuffer.cs  ContactPoint.cs  FilesWritten.txt  Globals.cs  InfectedPhysX.cpp  InfectedPhysX.def  MemoryBuffer.cs  NarrowPhaseParams.cs  PvdClient.cs  PvdDataStream.cs  PvdDebugLine.cs  PvdDebugPoint.cs  PvdDebugText.cs  PvdDebugTriangle.cs  Px1DConstraint.cs  Px1DConstraintFlag.cs  PxActor.cs  PxActorFlags.cs  PxActorShape.cs  PxActorType.cs  PxActorTypeFlags.cs  PxAggregate.cs  PxAllocId.cs  PxAllocIdStats.cs  PxAllocInfo.cs  PxAllocatorCallback.cs  PxArticulation.cs  PxArticulationAxis.cs  PxArticulationBase.cs  PxArticulationCache.cs  PxArticulationDrive.cs  PxArticulationDriveCache.cs  PxArticulationDriveType.cs  PxArticulationFlags.cs  PxArticulationImpl.cs  PxArticulationJoint.cs  PxArticulationJointBase.cs  (+416 more)
Mochi.PhysX/: Globals.cs  Mochi.PhysX.csproj  MochiPhysX.cs  PxBatchQueryResult.cs  PxControllerBehaviorCallback.cs  PxDefaultAllocator.cs  PxFixedSizeLookupTable8.cs
Mochi.PhysX.Generator/: Mochi.PhysX.Generator.csproj  Program.cs
Mochi.PhysX.Generator/#Adapters/: InheritanceViaGenericAdapter.cs
Mochi.PhysX.Generator/#Declarations/: EnumAliasDeclaration.cs  PhysXMarkerInterfacesDeclaration.cs
Mochi.PhysX.Generator/#Metadata/: HasMarkerInterface.cs
Mochi.PhysX.Generator/#Transformations/: EnableInheritanceViaGenericsTransformation.cs  HandlePxBatchQueryResultTransformation.cs  LiftBaseMembersTransformation.cs  PhysXCSharpTypeReductionTransformation.cs  PhysXCreateMarkerInterfacesTransformation.cs  PhysXEnumTransformation.cs  PhysXMacrosToConstantsTransformation.cs  PhysXNamespaceFixupTransformation.cs  PhysXRemovePaddingFieldsTransformation.cs  PhysxFlagsEnumTransformation.cs  RemoveBadPhysXDeclarationsTransformation.cs  __StripPrivateAndProtectedMembersTransformation.cs
Mochi.PhysX.Generator/Properties/: launchSettings.json
Mochi.PhysX.Modifications/: README.md  mochi-physx-win-x64.xml  physx.gitignore
Mochi.PhysX.Native/: CMakeLists.txt  Exports.gen.cpp  InlineExportHelper.cpp  InlineExportHelper.gen.cpp  Mochi.PhysX.Native.csproj  Mochi.PhysX.cpp  Windows.cmake  build-native.cmd
Mochi.PhysX.Ref/: Mochi.PhysX.Ref.csproj
Mochi.PhysX.Sample/: BasicAllocator.cs  ErrorCallback.cs  LoggingAllocator.cs  Mochi.PhysX.Sample.csproj  Program.cs  TextWriterEx.cs
Mochi.PhysX.Sample/Properties/: launchSettings.json
Mochi.PhysX/#Generated/: CUctx_st.cs  FilesWritten.txt  Globals.cs  MemoryBuffer.cs  Px1DConstraintFlag.cs  PxActorShape.cs  PxActorTypeFlags.cs  PxAllocId.cs  PxAllocInfo.cs  PxArticulation.cs  PxArticulationAxis.cs  PxArticulationBase.cs  PxArticulationCache.cs  PxArticulationFlags.cs  PxArticulationImpl.cs  PxArticulationJoint.cs  PxArticulationJointBase.cs  PxArticulationJointDriveType.cs  PxArticulationJointImpl.cs  PxArticulationJointReducedCoordinate.cs  PxArticulationLimit.cs  PxArticulationLink.cs  PxArticulationReducedCoordinate.cs  PxBVH33MidphaseDesc.cs  PxBVH34TriangleMesh.cs  PxBVHStructureDesc.cs  PxBase.cs  PxBaseFlags.cs  PxBatchQueryMemory.cs  PxBoxControllerDesc.cs  PxBoxObstacle.cs  PxBroadPhaseCallback.cs  PxBroadPhaseExt.cs  PxBroadPhaseRegion.cs  PxBroadPhaseRegionInfo.cs  PxBroadPhaseType.cs  PxCCDContactModifyCallback.cs  PxCache.cs  PxCacheAllocator.cs  (+180 more)
Snippets/: .editorconfig  Directory.Build.props  README.md
tooling/: Common.csproj.props  Common.csproj.targets  vs-tools.cmd
(+102 files in other folders)
